Fix amount field not wrapping for large numbers

--- a/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewSalaryListSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewSalaryListSuccess.css
@@ -186,6 +186,11 @@ div#tblSalary table td.component {
     word-wrap: break-word;
 }
 
+div#tblSalary table td.amount {
+    word-wrap: break-word;
+}
+
+
 div#tblSalary table td.comments {
     max-width: 200px;
 }
